--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "dependencies": {
     "axios": "^0.18.0",
     "gh-pages": "^2.0.1",
+    "history": "^3.0.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-flippy": "^0.1.2",
+    "react-redux": "^5.0.7",
     "react-router": "^3.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "2.1.5",
-    "react-spinners": "^0.3.2"
+    "react-spinners": "^0.3.2",
+    "jquery": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
